# fundamentals-research-pipeline

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROJECT_TECHNICAL_REPORT.md  README.md  pyproject.toml
.agent/plans/: 2026-02-07_sec_2023_2025_fundamentals_execplan.md  2026-02-15_sec_submissions_fiscal_calendar_execplan.md  2026-02-15_src_commenting_execplan.md  README.md
.github/workflows/: ci.yml
resumes/: RESUME_2026-02-21.md  RESUME_2026-03-01.md  RESUME_2026-03-15.md
specs/: 2026-07-21_BUFFETT_RESEARCH_PLATFORM_DESIGN.md  2026-07-22_STAGE2_TREND_METRICS_DESIGN.md  2026-07-22_WAREHOUSE_FOUNDATION_DESIGN.md  2026-07-24_STAGE1_CROSS_ERA_REMEDIATION_DESIGN.md  2026-07-24_STAGE1_PLAUSIBILITY_AND_ERA_BATCH2_DESIGN.md  AGENTS.override.md  CANONICAL_SCHEMA.md  GENERAL_ARCHITECTURE.md  SEC_EDGAR_IMPLEMENTATION_PLAN.md  SIMFIN_STAGE1_MAPPING.md
src/: AGENTS.override.md
src/fundamentals_pipeline/: __init__.py  __main__.py
src/trading_bot/: AGENTS.override.md  __init__.py  __main__.py
tests/: AGENTS.override.md  smoke_simfin_2023.py  smoke_simfin_single_ticker.py  test_cli_legacy_stage1_audit.py  test_cross_era_semantic_audit.py  test_legacy_fundamentals.py  test_legacy_stage1_audit.py  test_raw_fundamentals_unit_normalizer.py  test_sp500_universe.py  test_stage1_era_resolution.py  test_stage1_extension_coverage_audit.py
tests/core/: test_settings.py
tests/metrics/: test_builder.py  test_cli_metrics_build.py  test_registry.py  test_windows.py
tests/schema/: test_canonical_fundamentals_contract.py  test_field_era_semantics.py  test_fundamentals_annual_contract.py  (+3 more)
(+102 files in other folders)
