[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.2.0"
description = "S&P 500 universe and legacy fundamentals processing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "requests>=2.31",
]

[project.scripts]
trading-bot = "trading_bot.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
