[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fundamentals-pipeline"
version = "0.2.0"
description = "S&P 500 fundamentals research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "simfin>=1.0",
]

[project.scripts]
fundamentals-pipeline = "fundamentals_pipeline.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
